--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,10 @@
 // Mixins in here
-.btn-width(@width) {
+.btn(@width) {
   width: @width;
+  background-color: @button-bg;
+  color: @white;
+  font-size: 200%;
+  border: solid;
+  border-radius: 15px;
+  padding: 13px 0px;
 }
