--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,6 @@ nav {
   a {
     text-decoration: none;
     font-size: 150%;
-    color: black;
+    color: @font-color;
   }
 }
